2009-01-19  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSObject+Etoile.h:
	* Source/NSObject+Etoile.m:
	ETInstanceVariable
	Documented public methods.
	(-typeEncoding, -isObjectType, -properties): Added.
	(-typeName): Extracted the type encoding retrieval into the new method 
	-typeEncoding.

2009-01-17  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSObject+Etoile.h: Modified _ivar in ETInstanceVariable to 
	support NEXT_RUNTIME_2.
	* Source/NSObject+Etoile.m:
	(-instanceVariableForName:, -instanceVariableNames): 
	(ETInstanceVariable -name, -type, -value, -setValue:):
	Added NEXT_RUNTIME_2 support.

2008-11-21  Günther Noack <guenther@unix-ag.uni-kl.de>

	* ETTranscript class added

2008-11-15  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Bumped the framework version to 0.4. Cleaned a bit also.
	* GNUmakefile.postamble: Removed.
	* EtoileThread/GNUmakefile:
	* EtoileXML/GNUmakefile:
	Set these subframework versions to 0.1.
	* README: Written detailed content.
	* EtoileThread/README:
	* INSTALL: 
	Updated.
	* NEWS:
	* EtoileXML/README:
	Added.

2008-09-23  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSObject+Model.h:
	* NSObject+Model.m: 
	(-primitiveValueForKey:, -setPrimitiveValue:forKey:): Added.
	(-valueForProperty:, -setValue:forProperty:): Updated to use the new 
	methods.
	Also updated these methods in ETProperty class.

2008-09-12  Quentin Mathe <qmathe@club-internet.fr>

	Added -hash to ETUUID. The hash function produces around 1 collisions for 
	100000 UUIDs.
	* GNUmakefile: Defined UKTEST_LONG for long testing.
	* Source/ETUUID.m (-hash): Added..
	* Source/TestUUID.m (-testHash): Added a new test for collisions between 
	UUID hashes.

2008-09-08  Quentin Mathe <qmathe@club-internet.fr>

	Fixed UUID collisions on Linux by porting FreeBSD srandomdev() to it. If a 
	program is run several times, clock() returns relatively often an identical 
	value and with the low precision: 13000, 17000 etc. for example with ukrun 